--- a/demosite.css
+++ b/demosite.css
@@ -1,17 +1,17 @@
 /* --------------================################================-------------- *
  *                                   Generics                                   *
  * --------------================################================-------------- */
-
-			p{
-					font-family:Georgia;
-					font-size:12px;
-			}
 			
 			body {
 					padding:0px;
 					margin:0px;
+					margin-top:60px;
 
 					font-family:Arial Narrow;
+			}
+
+			p{
+					font-size:17px;
 			}
 
 			.normalmenu{
@@ -140,7 +140,6 @@
 					display:block;
 			}
 
-
 /* --------------================################================-------------- *
  *                                    Icons                                     *
  * --------------================################================-------------- */
@@ -167,6 +166,12 @@
 					width:90px;
 					padding-right:8px;
 					vertical-align: middle;
+			}
+			
+			#bear {
+					margin: auto;
+					width: 440px;
+					display:block;					
 			}
 			
 /* --------------================################================-------------- *
