--- a/demosite.css
+++ b/demosite.css
@@ -44,7 +44,16 @@
 					color:#fff;
 					font-size: 12px;
 			}
-			
+
+			.formbutton{
+					height:44px;
+					box-shadow: 0px 2px 8px #888, 0px 1px 3px #444;	
+					width:180;
+					border: 0;
+ 					border-radius: 0px;				
+ 					font-size:14px;
+			}
+						
 			.popunder{
 					background:#102;
 			}
