--- a/demosite.css
+++ b/demosite.css
@@ -21,14 +21,21 @@
 
 			p{
 					font-size:17px; 
-                    margin: 1cm;
+          margin: 40px;
+					padding-bottom: 15px;
 			}
 
             th, td {
                     padding: 25px;
             }
             
-
+			#content {
+					margin-top: 50px;
+					margin-left: 50px;
+			}
+			.logotyp {
+				letter-spacing: -1px;
+			}
 			.normalmenu{
 					background-color:#825;			
 					color: #fff;
@@ -113,6 +120,7 @@
 					left:0px;
 					top:0px;
 					width:100%;
+					min-width: 600px;
 					height:44px;
 										
 					box-shadow: 0px 2px 8px #888, 0px 1px 3px #444;
@@ -263,9 +271,10 @@
 			}
 			
 			#map{
-					margin: auto;
 					width: 200px;
-					display:block;
+					display:inline-block;
+					vertical-align: top;
+					margin-left: 40px;
 			}
 
 			#player{
@@ -373,4 +382,58 @@
 					text-decoration:none;
 					display: block;
 					padding:80px;
+			}
+			
+			.productlist {
+				display: inline-block;
+				margin-left: 40px;
+				width:300px;
+				min-height: 350px;				
+				vertical-align: top;
+			}
+			
+			.productlist li {
+				padding-top: 20px;
+				padding-bottom: 15px;
+			}
+			
+			.influencer {
+				display: inline-block;
+				margin-left: 40px;
+				width: 300px;
+				border: 4px solid #825;
+				border-radius: 15px;
+				padding: 10px;
+				text-align: center;
+				vertical-align: top;
+			}
+			
+			.influencer img {
+				/* Note that the image has this
+				   width and height, i.e., 
+					 no scaling is done by the css */
+				width: 220px; 
+				height: 220px;
+				border-radius: 10px;
+			}
+			
+			.influencer q {
+				font-style: italic;
+			}
+			.outeraddresscontainer {
+					display: inline-block;
+					
+					margin-left: 40px;
+			}
+			.addresscontainer {
+					width: 300px;
+			}
+			.addresscontainer address {
+				display: inline-block;
+				vertical-align: top;
+				margin: 10px 20px 10px 10px;
+			}
+			.addresscontainer .name {
+				font-style: italic;
+				font-weight: bolder;
 			}
